FIX: removed scrollbars from scene.

--- a/src/Components/UI/Scene.module.css
+++ b/src/Components/UI/Scene.module.css
@@ -23,5 +23,6 @@
 	background: center / cover no-repeat
 		url('../../assets/images/letters_pixel.jpg');
 
-	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
